@@ -21,3 +21,4 @@ Emil Mikulic        <emil.mikulic@rmit.edu.au>
 Austin Wood         <austin.wood@rmit.edu.au>
 Christopher Hoobin  <christopher.hoobin.edu.au>
 Adam Spiers         <stow@adamspiers.org>
+Stefano Lattarini
